--- a/app/import/index.html
+++ b/app/import/index.html
@@ -6,8 +6,6 @@
 		<meta charset="UTF-8" />
 		<!-- js -->
 		<script defer src="./src/js/index.js"></script>
-		<script defer src="./src/js/qr.js"></script>
-		<script defer src="./src/js/ga.js"></script>
 		<!-- css -->
 		<link rel="stylesheet" href="../.././src/global.css" />
 		<link rel="stylesheet" href="../../src/tailwind.css" />
@@ -40,8 +38,7 @@
 		<div class="bg-gray-700 w-3/5 m-auto mt-20 mb-60 rounded-2xl relative text-center p-1">
 			<div class="choose">
 				<div class="mx-auto rounded-2xl bg-gray-800 w-2/3 mb-20" id="choose">
-					<h2 class="pt-5">Import</h2>
-					<h3>QR code</h3>
+					<h3 class="pt-5" data-loc>QR code</h3>
 					<details class="details mb-8">
 						<summary data-loc class="summary">Instructions</summary>
 						<h4>
@@ -84,8 +81,7 @@
 				</div>
 
 				<div class="mx-auto rounded-2xl bg-gray-800 w-2/3 mb-20" id="choose">
-					<h2 class="pt-5">Advanced import</h2>
-					<h3>Google Authenticator QR code</h3>
+					<h3 class="pt-5" data-loc>Google Authenticator QR code</h3>
 					<details class="details mb-8">
 						<summary data-loc class="summary">Instructions</summary>
 						<h4>
