--- a/app/settings/index.html
+++ b/app/settings/index.html
@@ -461,12 +461,12 @@
 						<!-- experimental -->
 						<div id="experimental" class="tabcontent part hidden">
 							<div class="md:w-4/5 lg:w-2/3 mx-auto rounded-2xl bg-gray-800 mt-5">
-								<h4 class="pt-5">These features are under development and can be unstable! Use it at your own risk!</h4>
+								<h4 class="pt-5" data-loc>These features are under development and can be unstable! Use it at your own risk!</h4>
 								<button class="buttoni mb-8" onclick="experimentalDocs()">
 									<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
 										<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19.428 15.428a2 2 0 00-1.022-.547l-2.387-.477a6 6 0 00-3.86.517l-.318.158a6 6 0 01-3.86.517L6.05 15.21a2 2 0 00-1.806.547M8 4h8l-1 1v5.172a2 2 0 00.586 1.414l5 5c1.26 1.26.367 3.414-1.415 3.414H4.828c-1.782 0-2.674-2.154-1.414-3.414l5-5A2 2 0 009 10.172V5L8 4z" />
 									</svg>
-									Features
+									<span data-loc>Features</span>
 								</button>
 							</div>
 
