--- a/app/import/index.html
+++ b/app/import/index.html
@@ -25,7 +25,7 @@
 		<div class="mx-auto mt-40 w-3/5 rounded-2xl bg-gray-700 text-center">
 			<img src="../../img/header.png" class="relative top-5 h-16 w-16" />
 			<h2>Import</h2>
-			<h4 data-loc>You can create your import file from QR codes and Google Authenticator QR codes.</h4>
+			<h4 data-loc>You can create your import file here, see supported QR codes for more information.</h4>
 			<button class="buttoni mb-6" onclick="hide()">
 				<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
 					<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 14l2-2m0 0l2-2m-2 2l-2-2m2 2l2 2m7-2a9 9 0 11-18 0 9 9 0 0118 0z" />
@@ -39,7 +39,7 @@
 			<!-- supported qr code -->
 			<div class="mx-auto mb-20 w-2/3 rounded-2xl bg-gray-800">
 				<h3 data-loc class="pt-5">Supported QR codes</h3>
-				<h4 data-loc>List of the supported QR codes. Currently you can import one type at a time.</h4>
+				<h4 data-loc>List of the currently supported QR codes. You can import from more types at the same time.</h4>
 				<button class="buttoni mb-8" onclick="examplesLink()">
 					<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
 						<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12h6m-6 4h6m2 5H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z" />
@@ -51,15 +51,15 @@
 					<div class="my-3 ml-3 mr-1.5 flex w-1/2 flex-wrap items-center justify-center rounded-2xl bg-gray-700 p-4">
 						<h4 data-loc class="m-0 mb-3">TOTP 2FA QR code</h4>
 						<h5 data-loc class="m-0">A TOTP QR code is that you find mostly everywhere if you want to setup 2FA.</h5>
-						<h5 data-loc class="m-0">Example: (Google, Facebook, Microsoft)</h5>
-						<h5 data-loc class="m-0">Starts with: (otpauth://totp/)</h5>
+						<h5 data-loc class="m-0">Example: (Google, Facebook, Microsoft).</h5>
+						<h5 data-loc class="m-0">Starts with: (otpauth://totp/).</h5>
 						<a data-loc class="link pt-3 !text-lg" href="#totp" onclick="totpLink()">Detailed steps</a>
 					</div>
 					<div class="my-3 mr-3 ml-1.5 flex w-1/2 flex-wrap items-center justify-center rounded-2xl bg-gray-700 p-4">
 						<h4 data-loc class="m-0 mb-3">Migration 2FA QR code</h4>
 						<h5 data-loc class="m-0">A migration QR code is what you can export, and contains all of your codes.</h5>
-						<h5 data-loc class="m-0">Example: (Google Authenticator)</h5>
-						<h5 data-loc class="m-0">Starts with: (otpauth-migration://)</h5>
+						<h5 data-loc class="m-0">Example: (Google Authenticator).</h5>
+						<h5 data-loc class="m-0">Starts with: (otpauth-migration://).</h5>
 						<a data-loc class="link pt-3 !text-lg" href="#migration" onclick="migrationLink()">Detailed steps</a>
 					</div>
 				</div>
@@ -75,7 +75,7 @@
 							<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
 								<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 4v1m6 11h2m-6 0h-2v4m0-11v3m0 0h.01M12 12h4.01M16 20h4M4 12h4m12 0h.01M5 8h2a1 1 0 001-1V5a1 1 0 00-1-1H5a1 1 0 00-1 1v2a1 1 0 001 1zm12 0h2a1 1 0 001-1V5a1 1 0 00-1-1h-2a1 1 0 00-1 1v2a1 1 0 001 1zM5 20h2a1 1 0 001-1v-2a1 1 0 00-1-1H5a1 1 0 00-1 1v2a1 1 0 001 1z" />
 							</svg>
-							<span data-loc>Choose image(s)</span>
+							<span data-loc>Choose images</span>
 						</button>
 						<h5 data-loc class="m-0 pt-4">Choose images that contain a 2FA QR code.</h5>
 					</div>
@@ -90,13 +90,13 @@
 						<h5 data-loc class="m-0 pt-4">Use your webcam to scan 2FA QR codes.</h5>
 					</div>
 					<div class="screenCapture m-1 hidden">
-						<button class="buttoni w-[576px] sm:w-72" onclick="screenCapture()">
+						<button class="buttoni w-[576px] sm:w-72" onclick="captureFromScreen()">
 							<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
 								<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9.75 17L9 20l-1 1h8l-1-1-.75-3M3 13h18M5 17h14a2 2 0 002-2V5a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z" />
 							</svg>
 							<span data-loc>Capture from screen</span>
 						</button>
-						<h5 data-loc class="m-0 pt-4 pb-10">Capture a 2FA QR code from your screen.</h5>
+						<h5 data-loc class="m-0 pt-4 pb-6">Capture a 2FA QR code from your screen.</h5>
 					</div>
 				</div>
 				<!-- video -->
@@ -105,7 +105,7 @@
 					<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
 						<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 14l2-2m0 0l2-2m-2 2l-2-2m2 2l2 2m7-2a9 9 0 11-18 0 9 9 0 0118 0z" />
 					</svg>
-					Stop
+					<span data-loc>Stop</span>
 				</button>
 			</div>
 		</div>
