--- a/app/landing/index.html
+++ b/app/landing/index.html
@@ -5,47 +5,47 @@
 		<meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline'" />
 		<meta charset="UTF-8" />
 		<!-- css -->
-		<link rel="stylesheet" href="../.././src/global.css" />
-		<link rel="stylesheet" href="../../src/tailwind.css" />
+		<link rel="stylesheet" href="../.././styles/global.css" />
+		<link rel="stylesheet" href="../../styles/tailwind.css" />
 		<!-- js -->
 		<script defer src="./src/js/index.js"></script>
 	</head>
 	<body>
 		<!-- build number -->
-		<div class="w-full text-white bg-black font-bold build hidden z-10 top-0 sticky">
-			<div class="container flex flex-row items-center justify-center py-2 mx-auto">
+		<div class="build sticky top-0 z-10 hidden w-full bg-black font-bold text-white">
+			<div class="container mx-auto flex flex-row items-center justify-center py-2">
 				<div class="flex">
-					<h5 class="mx-3 flex flex-row m-0 font-bold build-content text-center">You are running a pre release version of Authme!</h5>
+					<h5 class="build-content m-0 mx-3 flex flex-row text-center font-bold">You are running a pre release version of Authme!</h5>
 				</div>
 			</div>
 		</div>
 
 		<!-- content -->
-		<div class="bg-gray-700 w-3/5 m-auto mt-40 mb-60 rounded-2xl relative text-center p-1">
+		<div class="relative m-auto mt-40 mb-60 w-3/5 rounded-2xl bg-gray-700 p-1 text-center">
 			<h1>Authme</h1>
-			<div class="mx-auto rounded-2xl bg-gray-800 w-2/3 mb-16" id="choose">
+			<div class="mx-auto mb-16 w-2/3 rounded-2xl bg-gray-800" id="choose">
 				<h3 data-loc class="pt-3">Create password</h3>
 				<h4 data-loc id="text">Create a strong password to encrypt your 2FA codes!</h4>
-				<div class="flex flex-row flex-wrap justify-center gap-3 pb-5 select-none">
+				<div class="flex select-none flex-row flex-wrap justify-center gap-3 pb-5">
 					<div class="flex flex-col">
 						<label data-loc class="mb-1" id="password_label1">Password</label>
 						<input class="input" type="password" id="password_input1" spellcheck="false" />
-						<svg tabindex="0" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 relative top-[-45px] cursor-pointer left-[250px]" fill="none" viewBox="0 0 24 24" stroke="black" id="show_pass_0">
+						<svg tabindex="0" xmlns="http://www.w3.org/2000/svg" class="relative top-[-45px] left-[250px] h-6 w-6 cursor-pointer" fill="none" viewBox="0 0 24 24" stroke="black" id="show_pass_0">
 							<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z" />
 							<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M2.458 12C3.732 7.943 7.523 5 12 5c4.478 0 8.268 2.943 9.542 7-1.274 4.057-5.064 7-9.542 7-4.477 0-8.268-2.943-9.542-7z" />
 						</svg>
-						<svg tabindex="0" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 relative top-[-45px] cursor-pointer left-[250px] hidden" fill="none" viewBox="0 0 24 24" stroke="black" id="show_pass_01">
+						<svg tabindex="0" xmlns="http://www.w3.org/2000/svg" class="relative top-[-45px] left-[250px] hidden h-6 w-6 cursor-pointer" fill="none" viewBox="0 0 24 24" stroke="black" id="show_pass_01">
 							<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13.875 18.825A10.05 10.05 0 0112 19c-4.478 0-8.268-2.943-9.543-7a9.97 9.97 0 011.563-3.029m5.858.908a3 3 0 114.243 4.243M9.878 9.878l4.242 4.242M9.88 9.88l-3.29-3.29m7.532 7.532l3.29 3.29M3 3l3.59 3.59m0 0A9.953 9.953 0 0112 5c4.478 0 8.268 2.943 9.543 7a10.025 10.025 0 01-4.132 5.411m0 0L21 21" />
 						</svg>
 					</div>
 					<div class="flex flex-col">
 						<label data-loc class="mb-1" id="password_label2">Confirm password</label>
 						<input class="input" type="password" id="password_input2" spellcheck="false" />
-						<svg tabindex="0" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 relative top-[-45px] cursor-pointer left-[250px]" fill="none" viewBox="0 0 24 24" stroke="black" id="show_pass_1">
+						<svg tabindex="0" xmlns="http://www.w3.org/2000/svg" class="relative top-[-45px] left-[250px] h-6 w-6 cursor-pointer" fill="none" viewBox="0 0 24 24" stroke="black" id="show_pass_1">
 							<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z" />
 							<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M2.458 12C3.732 7.943 7.523 5 12 5c4.478 0 8.268 2.943 9.542 7-1.274 4.057-5.064 7-9.542 7-4.477 0-8.268-2.943-9.542-7z" />
 						</svg>
-						<svg tabindex="0" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 relative top-[-45px] cursor-pointer left-[250px] hidden" fill="none" viewBox="0 0 24 24" stroke="black" id="show_pass_11">
+						<svg tabindex="0" xmlns="http://www.w3.org/2000/svg" class="relative top-[-45px] left-[250px] hidden h-6 w-6 cursor-pointer" fill="none" viewBox="0 0 24 24" stroke="black" id="show_pass_11">
 							<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13.875 18.825A10.05 10.05 0 0112 19c-4.478 0-8.268-2.943-9.543-7a9.97 9.97 0 011.563-3.029m5.858.908a3 3 0 114.243 4.243M9.878 9.878l4.242 4.242M9.88 9.88l-3.29-3.29m7.532 7.532l3.29 3.29M3 3l3.59 3.59m0 0A9.953 9.953 0 0112 5c4.478 0 8.268 2.943 9.543 7a10.025 10.025 0 01-4.132 5.411m0 0L21 21" />
 						</svg>
 					</div>
@@ -58,13 +58,13 @@
 				</button>
 
 				<div class="mx-auto pb-3">
-					<details class="details mb-5 transform ease-in duration-200" onclick="showMoreOptions()">
-						<summary data-loc class="summary font-bold mb-3 cursor-pointer">More options</summary>
+					<details class="details mb-5 transform duration-200 ease-in" onclick="showMoreOptions()">
+						<summary data-loc class="summary mb-3 cursor-pointer font-bold">More options</summary>
 					</details>
 				</div>
 			</div>
 			<div>
-				<div id="more_options" class="mx-auto rounded-2xl bg-gray-800 w-2/3 mt-20 mb-20 pb-10 animation invisible hidden">
+				<div id="more_options" class="animation invisible mx-auto mt-20 mb-20 hidden w-2/3 rounded-2xl bg-gray-800 pb-10">
 					<h3 data-loc class="pt-5">Don't require password</h3>
 					<h4 data-loc>If you don't want to type in your password every time you launch Authme.</h4>
 					<button onclick="noPassword()" class="buttoni mb-7">
@@ -76,12 +76,12 @@
 					<hr />
 					<h3 data-loc>Window capture</h3>
 					<h4 data-loc>Allows screenshots and screen capture. You can record or screenshot the app until you restart Authme.</h4>
-					<div class="flex justify-center items-center w-72 h-[68px] bg-white mx-auto rounded-full">
-						<div class="relative inline-block w-10 mr-2 align-middle select-none bg-gray-900 border-2 border-gray-900 rounded-full">
-							<input onclick="toggleWindowCapture()" id="tgl0" type="checkbox" class="toggle checked:bg-white outline-none focus:outline-none right-5 duration-200 ease-in absolute block w-4 h-4 rounded-full top-1 bg-black appearance-none cursor-pointer" />
-							<label for="tgl0" class="toggle-bg block overflow-hidden h-6 rounded-full bg-white cursor-pointer"></label>
+					<div class="mx-auto flex h-[68px] w-72 items-center justify-center rounded-full bg-white">
+						<div class="relative mr-2 inline-block w-10 select-none rounded-full border-2 border-gray-900 bg-gray-900 align-middle">
+							<input onclick="toggleWindowCapture()" id="tgl0" type="checkbox" class="toggle absolute right-5 top-1 block h-4 w-4 cursor-pointer appearance-none rounded-full bg-black outline-none duration-200 ease-in checked:bg-white focus:outline-none" />
+							<label for="tgl0" class="toggle-bg block h-6 cursor-pointer overflow-hidden rounded-full bg-white"></label>
 						</div>
-						<span id="tgt0" class="text-black text-xl">Off</span>
+						<span id="tgt0" class="text-xl text-black">Off</span>
 					</div>
 				</div>
 			</div>
